<resources>
    <string name="app_name">GemSelections</string>
    <string name="tv_payment_1">
        YOU MAY DEPOSIT <b>CHEQUE OR DD </b> ELECTRONIC TRANSFER TO: \n\n
        Khanna Gems Private Limited,\n
        Punjab and Sindh Bank,\n
        <b>A/c No. 08681300000642</b>\n
        <b>IFSC Code: PSIB0000963</b>
    </string>
    <string name="tv_payment_2">
        PAY BY USING\n
        <b>www.paypal.com</b>\n
        to\n
        <b>care@khannagems.com</b>
    </string>
    <string name="tv_payment_3">
        SEND A CHEQUE IN FAVOUR OF\n
        <b>Khanna Gems Private Limited</b>\n\n
        SHOP NO. 8, A-3 DDA MARKET\n
        Janakpuri,\n
        New Delhi - 110058\n
        (Near St. Marks School)
    </string>
    <string name="delivery_message">We deliver anywhere in the World.\n\nThrough the 25 years of its existence Gem Selections has consistently delivered quality and that too at most reasonable prices.</string>
    <string name="_yugal1">Aakarshan Vriddhi Yantra</string>
    <string name="_yugal2">
    Aakarshan Vriddhi Yantra. (AVY08) Cleopatra was known to wear magnets on her body and that helped her to attract the opposite sex. Seven Mukhi Rudraksha is manifestation of Kamdev and pearl is the Gem of Beauty these there in. Combination can gives you an unfore advantage in attracting the opposite sex and retaining it. Men and Women of all age groups can use it. Advantageously
        \n\nThe Mantra has to be recited on a Rudhraksha mala and should be spoken in such a way that at least you can hear it. Shri Shiv Mahapuran is of the view that Rudhraksha does not give its full results without the use of proper mantras.
        \n\n
        <b>Rs. 6000.00</b>
    </string>
    <string name="_yugal3">Laxmi Vardhak Yugal\n\nRs. 2100.00</string>
    <string name="_yugal4">
    Laxmi Vardhak Yugal. (LVY02) Rudraksha Combination for Wealth (Laxmi Vardhak Yugal) : Six Mukhi Rudraksha has the powers of Venus it gives wealth. Laxmiji resides where Six Mukhi is kept. In combination with Four Mukhi Rudraksha which is the manifestation of Genesha and Emerald which brings all kinds of wealth and makes it stable. If this combination is worn regularly and Laxmi Strota is recited daily then all wants of the person are automatically fulfilled and he is never seen in a state of dissatisfaction.
    \n\nThe Mantra has to be recited on a Rudhraksha mala and should be spoken in such a way that at least you can hear it. Shri Shiv Mahapuran is of the view that Rudhraksha does not give its full results without the use of proper mantras.
    \n\n
    <b>Rs. 2100.00 </b>
    </string>
    <string name="_yugal5">Raktachap Niyantran Raj Yog Yugal</string>
    <string name="_yugal6">
        Raktachap Niyantran tatha Rajya such Yugal. (RNT06) Sun is the regulator of heart and blood stream in combination with Rudraksha it is said to give special efforts. It also help in giving better status in service and gives the support of the government and seniors. Rudraksha Mala, 7.25 Rati Ruby Surya lockets made of 92.5% Pure Silver with Surya Mantra Engraved on it.
        \n\n
        The Mantra has to be recited on a Rudhraksha mala and should be spoken in such a way that at least you can hear it. Shri Shiv Mahapuran is of the view that Rudhraksha does not give its full results without the use of proper mantras.
        \n\n
        <b>Rs. 3100.00 </b>
    </string>
    <string name="_yugal7">Sarve Manokamana Prapti Yugal \n\nRs. 2100.00</string>
    <string name="_yugal8">
        Sarve Manokamana Prapti Yugal. (SMY09) Life is short and the desires of mankind are multiple. The planet Jupiter is said to give earthly pleasures and also salvation after death. Sarva Mano – Kamna Prapti Yugal empowers Jupiter and gives all that a man desires in life. It contains 3.25 rt Golden Topaz made in silver with Guru Mantra inscribed on it strung in a thread with two beads of the mighty Five Mukhi Rudraksha. It should be regularly worn and the mantra of Jupiter ‘Om ! Gram Greem Groom Sah Guruve Namah’ should be regularly chanted to strengthen Jupiter and for fulfilment of all desires.
        \n\n
        The Mantra has to be recited on a Rudhraksha mala and should be spoken in such a way that at least you can hear it. Shri Shiv Mahapuran is of the view that Rudhraksha does not give its full results without the use of proper mantras.
        \n\n
        <b>Rs. 2100.00</b>

    </string>
    <string name="_yugal9">Shatru Nashak Yugal \n\nRs.1550.00</string>
    <string name="_yugal10">
        Shatru Nashak Yugal. (SNY03) Rudraksha Combination to Win Over Enemies (Shatru Nashak Yugal): All successful people have to face enemies created by envy. Enemies not only try to harm you by various means but also steel your peace of mind. Various Vedic prayers and Tantric rituals are available for steeling a victory over ones enemies. Shatru Nashak Rudraksha Yugal is aimed at puncturing the power base of the people having ill feelings or enmity towards you. It weakens there resolve and creates problems for them so that instead of putting there mind on creating problems for you they get busy fighting for there own survival.
        \n\n
        The Mantra has to be recited on a Rudhraksha mala and should be spoken in such a way that at least you can hear it. Shri Shiv Mahapuran is of the view that Rudhraksha does not give its full results without the use of proper mantras.
        \n\n
        <b>Rs. 1550.00</b>

    </string>
    <string name="_yugal11">Sukhi Bhav Yugal\n\nRs. 2100.00</string>
    <string name="_yugal12">
        Sukhi Bhav Yugal. (SBY05) Rudraksha Combination for Betterment of Married Life / Love (Sukhi Bhav Yugal) : All wealth, fame, success and achievements seem useless for a person who does not get love in life, instead of happiness there is a constant state of depression. To overcome these problems one should wear this Yugal. If one wears it regularly and chants Gayatri Mantra he/she gets love from the cherished members of opposite sex giving a sense of fulfilment.
        \n\n
        The Mantra has to be recited on a Rudhraksha mala and should be spoken in such a way that at least you can hear it. Shri Shiv Mahapuran is of the view that Rudhraksha does not give its full results without the use of proper mantras.
        \n\n
        <b>Rs. 2100.00 </b>
    </string>
    <string name="_yugal13">Vidya Vardhak Yugal\n\nRs. 5100.00 </string>
    <string name="_yugal14">
        Vidya Vardhak Yugal. (VVY01) Rudraksha Combination for Education (Vidya Vardhak Yugal) This Rudraksha combination (Yugal) improves the level of concentration, retentive power and restrains the mind from being deverted towards Maya created by the various Rajasik and Tamsik powers (shakties) of nature. The results that the students get by wearing this combination are simply amazing. There retentive power and intelligence level improves leading to better grades.
        \n\n
        The Mantra has to be recited on a Rudhraksha mala and should be spoken in such a way that at least you can hear it. Shri Shiv Mahapuran is of the view that Rudhraksha does not give its full results without the use of proper mantras.
        \n\n
        <b>Rs. 5100.00 </b>
    </string>
    <string name="_yugal15">Vijaye Bhav Yugal\n\nRs. 11000.00 </string>
    <string name="_yugal16">
        Vijaye Bhav Yugal. (VBY04) Rudraksha Combination to get Professional Rise (Vijaye Bhav Yugal) Nothing succeeds like success is a truth known to all of us but our efforts are not always rewarded and we all often feel that there are certain cosmic powers which must support our efforts in order to give us a lasting success. Vijaye Bhav Yugal helps in getting support of these powers. If this Yugal is constantly worn and the mantra ‘Om Namah Shivae’ is regularly chanted then the efforts of the person are invariably crowned with success.
        \n\n
        The Mantra has to be recited on a Rudhraksha mala and should be spoken in such a way that at least you can hear it. Shri Shiv Mahapuran is of the view that Rudhraksha does not give its full results without the use of proper mantras.
        \n\n
        <b>Rs. 11000.00 </b>
    </string>
    <string name="_yugal17">Vyapar Vridhi Karja Mukti Yugal\n\nRs. 5100.00 </string>
    <string name="_yugal18">
        Vyapar Vridhi Karja Mukti Yugal. (VVK07) Emerals ie, Morkat mani or Panna is the Gem of lord Ganesha this Gem gives enhancement of wealth and success in Business ventures in combination with the Rudraksha of Budh the Four Mukhi Rudraksha it gives Instant results. It is a must for people who want to rice in Business and make their Enjoining or future venture a Success. Two Four Mukhi Rudraksha With 7.25 rati Emeralds in 92.5% Pure Silver Yantra With Budh Mantra Engraved on in.
        \n\n
        The Mantra has to be recited on a Rudhraksha mala and should be spoken in such a way that at least you can hear it. Shri Shiv Mahapuran is of the view that Rudhraksha does not give its full results without the use of proper mantras.
        \n\n
        <b>Rs. 5100.00</b>
    </string>
    <string name="handspigift1">
    <b>Code: (HGI 01)</b>
\n\n
White marble plate Rajasthani lady in build.  Beautiful hand painting with original and gold colors.  Used for decoration piece.
\n\n
Weight: 850.00gms\n\n
Size: 9 inch\n\n
Rate: 600.00
    </string>
    <string name="handspigift2">
<b>Code: (HGI 02)</b>
\n\n
White marble plate Queen of Rajasthan in build. Beautiful hand painting with original and gold colors. Used for decoration piece.\n\n
Weight: 850.00gms\n\n
Size: 9 inch\n\n
Rate: 600.00
    </string>
    <string name="handspigift3">
<b>Code: (HGI 03)</b>
\n\n
White marble tile pair of birds in builds.  Beautiful hand painting.  Original colors are used.  Used as a decoration piece.\n\n
        Weight: 290.00gms\n\n
Size: 7\" x 5\"\n\n
Rate: 450.00
    </string>
    <string name="handspigift4">
<b>Code: (HGI 04)</b>
\n\n
White marble tile pair of birds in builds.  Beautiful hand painting.  Original colors are used.  Used as a decoration piece.\n\n
Weight: 290.00gms\n\n
Size: 7\" x 5\"\n\n
Rate: 450.00
    </string>
    <string name="handspigift5">
<b>Code: (HGI 05)</b>
\n\n
White marble tile pair of birds in builds.  Beautiful hand painting.  Original colors are used.  Used as a decoration piece.\n\n
Weight: 290.00gms\n\n
Size: 7\" x 5\"\n\n
Rate: 450.00
    </string>
    <string name="handspigift6">
<b>Code: (HGI 06)</b>
\n\n
White marble tile pair of birds in builds.  Beautiful hand painting.  Original colors are used. Can be Used as a decoration piece or place in stand.\n\n
Weight: 290.00gms\n\n
Size: 7\" x 5\"\n\n
Rate: 450.00
    </string>
    <string name="handspigift7">
<b>Code: (HGI 07)</b>
\n\n
White marble tile. Beautiful Rajasthani lady in build.  Beautiful hand painting with original colors.  Can be used as a wall hanging or kept in a stand.\n\n
        Weight: 290.00gms\n\n
Size: 7\" x 5\"\n\n
Rate: 450.00
    </string>
    <string name="handspigift8">
<b>Code: (HGI 08)</b>
\n\n
White marble tile colored camel in build. Camel is the symbol of Rajasthan means of transport.  Beautiful hand painting with original colors.  Can be used as a decoration piece or wall hanging.
        \n\n
Weight: 270 gm
\n\n
Size: 6\" x 4\"
\n\n
Rate: 450.00
    </string>
    <string name="handspigift9">
<b>Code: (HGI 09)</b>
\n\n
White marble tile symbol of prosperity Elephant is in build.  Beautiful hand painting with original colors.  Can be used as a decoration piece or wall hanging.        \n\n
Weight: 270 gm
\n\n
Size: 6\" x 4\"
\n\n
Rate: 450.00
    </string>
    <string name="handspigift10">
        <b>Code: (HGI 10)</b>
\n\n
White marble tile symbol of power horse is in build.  Beautiful hand painting with original colors.  Can be used as a decoration piece or wall hanging.\n\n
        Weight: 270 gm
\n\n
Size: 6\" x 4\"
\n\n
Rate: 450.00
    </string>
</resources>