<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/tv_payment_1"
            android:background="#e2e2e2"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/tv_payment_2"
            android:background="#e2e2e2"/>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/tv_payment_3"
            android:background="#e2e2e2"/>

        <Button
            android:id="@+id/ok_button"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK" />
    </LinearLayout>
</ScrollView>
