<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/handspigift1"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:text="@string/handspigift1"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/handspigift2"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:text="@string/handspigift2"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/handspigift3"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:text="@string/handspigift3"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/handspigift4"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:text="@string/handspigift4"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/handspigift5"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:text="@string/handspigift5"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/handspigift6"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:text="@string/handspigift6"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/handspigift7"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:text="@string/handspigift7"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/handspigift8"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:text="@string/handspigift8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/handspigift9"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:text="@string/handspigift9"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="15dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/handspigift10"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:text="@string/handspigift10"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        

    </LinearLayout>
</ScrollView>